# nano_solver

./: CMakeLists.txt  README.md
src/: solver.cpp  solver.h  solver_test.cpp
